# edlm-conv2d

./: .gitignore  README.md  pyproject.toml
src/: lenet_gemm.ipynb  structural_sparsification.ipynb  symmetric_quantization.ipynb  unstructured_sparsification.ipynb
src/utils/: classify_single.py  col2im.py  conv2dgemm.py  im2col_function.py  lsq_quantization.py  structural_sparsification.py  unstructured_sparsification.py
tests_stats/: lenet_quantized.json  lenet_quantized_kernel3.json  lenet_quantized_kernel3_bs256.json  lenet_quantized_kernel5_bs64.json  lenet_quantized_kernel7_bs8.json  lenetgemm_kernel3_bs256.json  lenetgemm_kernel5_bs256.json  lenetgemm_kernel5_bs64.json  lenetgemm_kernel7_bs256.json  lenetgemm_kernel7_bs4.json  merge_tables.ipynb  sparse_lenet.json  sparse_lenet_kernel3.json  sparse_lenet_kernel3_bs256.json  sparse_lenet_kernel7_bs256.json  sparse_lenet_kernel7_bs8.json  sparse_struct_lenet_kernel5_bs64.json  sparse_struct_lenet_kernel7_bs4.json  sparse_struct_lenet_kernel7_bs8.json
